<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nim"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#EDE7F6"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/nim"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/nama"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#EDE7F6"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/nama_lengkap"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/hp"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#EDE7F6"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/nomor_handphone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/studi"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#EDE7F6"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/program_studi"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#EDE7F6"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/alamat_e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="#455A64" />

    <Button
        android:id="@+id/button_submit"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:capitalize="words"
        android:fontFamily="@font/nunito_bold_italic"
        android:text="@string/simpan"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:cornerRadius="4dp"
        tools:ignore="Deprecated,TextViewEdits" />

    <Button
        android:id="@+id/button_list"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:fontFamily="@font/nunito_bold_italic"
        android:text="@string/daftar_mahasiswa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:cornerRadius="4dp"
        tools:ignore="Deprecated,TextViewEdits" />

</LinearLayout>